syntax = "proto3";

option csharp_namespace = "BLTAdoptAHeroConnection.Proto";
option go_package = "github.com/gorymoon/adoptahero-ebs/internal/protos";

package blt.adoptahero;

message HeroData {
  string name = 1;
  BaseInfo info = 2;
  map<string, Skill> skills = 3;
  map<string, int32> attributes = 4;
  map<string, Stat> stats = 5;
  repeated string achievement = 6;
  repeated string battle_inventory = 7;
  repeated string civilian_inventory = 8;
  repeated string custom_inventory = 9;
  repeated Retinue retinues = 10;
  repeated string active_powers = 11;
  repeated string passive_powers = 12;

  message BaseInfo {
    int32 gold = 1;
    string class = 2;
    string clan = 3;
    string culture = 4;
    int32 age = 5;
    int32 hp = 6;
    int32 max_hp = 7;
    string last_seen = 8;
    int32 level = 9;
    int32 tier = 10;
    string equipment_class = 11;
  }
}

message Skill {
  int32 level = 1;
  int32 focus = 2;
}

message Stat {
  int32 total_stat = 1;
  int32 class_stat = 2;
}

message Retinue {
  string name = 1;
  int32 tier = 2;
  int32 count = 3;
}